force-app/main/default/objects/Travel_Log__c/Travel_Log__c.object-meta.xml
<CustomObject>
    <label>Travel Log</label>
    <nameField>
        <displayFormat>TL-{000000}</displayFormat>
        <label>Travel Log ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Travel Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>