force-app/main/default/objects/Travel_Log__c/fields/DataDeployID__c.field-meta.xml
<CustomField>
    <fullName>DataDeployID__c</fullName>
    <externalId>true</externalId>
    <label>DataDeployID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>