force-app/main/default/objects/Travel_Log__c/fields/Kilometres__c.field-meta.xml
<CustomField>
    <fullName>Kilometres__c</fullName>
    <label>Kilometres</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>