force-app/main/default/objects/Travel_Log__c/fields/Travel_From__c.field-meta.xml
<CustomField>
    <fullName>Travel_From__c</fullName>
    <label>Travel From</label>
    <scale>0</scale>
    <type>Location</type>
</CustomField>