force-app/main/default/objects/Travel_Log__c/fields/Travel_To__c.field-meta.xml
<CustomField>
    <fullName>Travel_To__c</fullName>
    <label>Travel To</label>
    <scale>0</scale>
    <type>Location</type>
</CustomField>